<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="timeOptionsVM" type="com.aartipotnurusapplication.app.modules.timeoptions.data.viewmodel.TimeOptionsVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearTimeOptions"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylebluegray_300_ec">
        <LinearLayout android:gravity="center_vertical"
            android:id="@+id/linearRowprocrasticat"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_3pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStylegray_50">
            <TextView android:ellipsize="end"
                android:id="@+id/txtProcrastiCat"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_7pxv"
                android:layout_marginStart="@dimen/_116pxh"
                android:layout_marginTop="@dimen/_44pxv"
                android:layout_weight="0.64" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{timeOptionsVM.timeOptionsModel.txtProcrastiCat}"
                style="@style/txt" tools:text="@string/lbl_procrasticat"/>
            <ImageView android:id="@+id/imageImageTwo"
                android:layout_height="@dimen/_30pxh"
                android:layout_marginBottom="@dimen/_15pxv"
                android:layout_marginEnd="@dimen/_100pxh"
                android:layout_marginStart="@dimen/_2pxh"
                android:layout_marginTop="@dimen/_44pxv"
                android:layout_width="@dimen/_68pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_image1"
                tools:ignore="ContentDescription" tools:src="@drawable/img_image1"/>
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearColumnstudytime"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_18pxv"
            android:layout_width="wrap_content"
            android:orientation="vertical" style="@style/groupStylegray_101">
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtStudyTime"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_2pxv"
                android:layout_marginEnd="@dimen/_84pxh"
                android:layout_marginStart="@dimen/_84pxh"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{timeOptionsVM.timeOptionsModel.txtStudyTime}"
                style="@style/txtKalamregular24" tools:text="@string/lbl_study_time"/>
        </LinearLayout>
        <FrameLayout android:id="@+id/frameStackduration"
            android:layout_gravity="start"
            android:layout_height="@dimen/_701pxv"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh" android:layout_width="@dimen/_333pxh">
            <LinearLayout android:id="@+id/linearColumnduration"
                android:layout_gravity="top|end"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_83pxv"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_83pxv"
                android:layout_width="wrap_content"
                android:orientation="vertical" style="@style/groupStylegray_101">
                <TextView android:ellipsize="end" android:gravity="end"
                    android:id="@+id/txtDuration"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/_16pxv"
                    android:layout_marginEnd="@dimen/_30pxh"
                    android:layout_marginStart="@dimen/_30pxh"
                    android:layout_marginTop="@dimen/_19pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{timeOptionsVM.timeOptionsModel.txtDuration}"
                    style="@style/txtKalamregular24" tools:text="@string/lbl_20_minutes"/>
            </LinearLayout>
            <ImageView android:id="@+id/imageScreenshot2024"
                android:layout_gravity="top|start"
                android:layout_height="@dimen/_181pxh"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="@dimen/_173pxh"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_screenshot2024_181x173}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_screenshot2024_181x173"/>
            <LinearLayout android:id="@+id/linearColumndurationOne"
                android:layout_gravity="top|end"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_249pxv"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_249pxv"
                android:layout_width="wrap_content"
                android:orientation="vertical" style="@style/groupStylegray_102">
                <TextView android:ellipsize="end" android:gravity="end"
                    android:id="@+id/txtDurationOne"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/_18pxv"
                    android:layout_marginEnd="@dimen/_30pxh"
                    android:layout_marginStart="@dimen/_30pxh"
                    android:layout_marginTop="@dimen/_17pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{timeOptionsVM.timeOptionsModel.txtDurationOne}"
                    style="@style/txtKalamregular24" tools:text="@string/lbl_30_minutes"/>
            </LinearLayout>
            <ImageView android:id="@+id/imageScreenshot2024One"
                android:layout_gravity="top|start"
                android:layout_height="@dimen/_181pxh"
                android:layout_marginBottom="@dimen/_166pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_166pxv"
                android:layout_width="@dimen/_173pxh"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_screenshot2024_181x173}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_screenshot2024_181x173"/>
            <LinearLayout android:id="@+id/linearColumndurationTwo"
                android:layout_gravity="bottom|end"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_201pxv"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_201pxv"
                android:layout_width="wrap_content"
                android:orientation="vertical" style="@style/groupStylegray_102">
                <TextView android:ellipsize="end" android:gravity="end"
                    android:id="@+id/txtDurationTwo"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/_18pxv"
                    android:layout_marginEnd="@dimen/_30pxh"
                    android:layout_marginStart="@dimen/_30pxh"
                    android:layout_marginTop="@dimen/_17pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{timeOptionsVM.timeOptionsModel.txtDurationTwo}"
                    style="@style/txtKalamregular24" tools:text="@string/lbl_45_minutes"/>
            </LinearLayout>
            <ImageView android:id="@+id/imageScreenshot2024Two"
                android:layout_gravity="bottom|start"
                android:layout_height="@dimen/_181pxh"
                android:layout_marginBottom="@dimen/_178pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_178pxv"
                android:layout_width="@dimen/_173pxh"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_screenshot2024_181x173}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_screenshot2024_181x173"/>
            <LinearLayout android:id="@+id/linearColumndurationThree"
                android:layout_gravity="bottom|end"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_23pxv"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_23pxv"
                android:layout_width="wrap_content"
                android:orientation="vertical" style="@style/groupStylegray_102">
                <TextView android:ellipsize="end" android:gravity="end"
                    android:id="@+id/txtDurationThree"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/_18pxv"
                    android:layout_marginEnd="@dimen/_31pxh"
                    android:layout_marginStart="@dimen/_31pxh"
                    android:layout_marginTop="@dimen/_17pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{timeOptionsVM.timeOptionsModel.txtDurationThree}"
                    style="@style/txtKalamregular24" tools:text="@string/lbl_60_minutes"/>
            </LinearLayout>
            <ImageView android:id="@+id/imageScreenshot2024Three"
                android:layout_gravity="bottom|start"
                android:layout_height="@dimen/_181pxh"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="@dimen/_173pxh"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_screenshot2024_181x173}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_screenshot2024_181x173"/>
        </FrameLayout>
    </LinearLayout>
</layout>
